--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -10,34 +10,38 @@
 
 <div id="header">
 
-  <div id="buscador">
+<!--  <div id="buscador">
     <input type="search" size="150"/>
     <butom>
-
-  </div>
-
-fdfg
-  </div>
 </div>
+-->
+
+parte header de arriba
+  </div>
 
 
 
-
-
-
-
-
-
+<div id="banner">
+para poner el banner
+</div>
 
 
 <div id="content">
-  bcvxb
+lista de episodios de anime
 </div>
 
+<div id="comentarios">
+comentarios
+</div>
+
+<div id="series-recientes">
+  series reciente
+</div>
 
 <div id="footer">
-  sadgsfs
+contenido final
 </div>
+
 
 </body>
 </html>
