--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -9,6 +9,12 @@
 <body>
 
 <div id="header">
+  <div id="content-logo">
+    <div class="logo">
+        <img src="http://via.placeholder.com/140x60">
+    </div>
+  </div>
+
 
 <!--  <div id="buscador">
     <input type="search" size="150"/>
@@ -16,7 +22,7 @@
 </div>
 -->
 
-parte header de arriba
+igfhsdjkfjkgn
   </div>
 
 
