--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -22,24 +22,49 @@ parte header de arriba
 
 
 <div id="banner">
-para poner el banner
+      para poner el banner
 </div>
 
 
-<div id="content">
-lista de episodios de anime
-</div>
+
+
+<div id="main">
+    <h1>Lista de episodios de anime</h1>
+
+<div class="box"> Episodio 1</div>
+<div class="box"> Episodio 2</div>
+<div class="box"> Episodio 3  </div>
+<div class="box"> Episodio 4 </div>
+
+
+<div class="box"> Episodio 5 </div>
+<div class="box"> Episodio 6</div>
+<div class="box"> Episodio 7  </div>
+<div class="box"> Episodio 8 </div>
+
+<div class="box"> Episodio 9 </div>
+<div class="box"> Episodio 10</div>
+<div class="box"> Episodio  11</div>
+<div class="box"> Episodio 12</div>
+
+    </div>
+
+
+
+
+
+
 
 <div id="comentarios">
-comentarios
+    comentarios
 </div>
 
 <div id="series-recientes">
-  series reciente
+        series reciente
 </div>
 
 <div id="footer">
-contenido final
+        contenido final
 </div>
 
 
