--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -8,22 +8,35 @@
 
 <body>
 
-<div id="header">
+<main>
+
   <div id="content-logo">
     <div class="logo">
-        <img src="http://via.placeholder.com/140x60">
+        <img src="naruto.png">
     </div>
   </div>
 
-
-<!--  <div id="buscador">
-    <input type="search" size="150"/>
-    <butom>
-</div>
--->
-
-igfhsdjkfjkgn
+  <div id="buscador">
+      <input type="search" size="10" placeholder="buscar"/>
+    <div class="lupa" src="buscador">
+      <img src="buscar.png">
+    </div>
   </div>
+  
+  <div id="content-menu">
+    <nav>
+         <a href="animeyt-tv.html">INICIO</a>
+         <a href="http://www.animeyt.tv/animes">ANIMES</a>
+         <a href="http://www.animeyt.tv/emision">EN EMISIÓN</a>
+         <a href="https://www.ytlandia.com/">NOTICIAS</a>
+    </nav>
+  </div>
+
+
+
+
+
+  </main>
 
 
 
