--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -37,32 +37,82 @@ igfhsdjkfjkgn
 <div id="main">
     <h1>Lista de episodios de anime</h1>
 
-<div class="box"> Episodio 1</div>
-<div class="box"> Episodio 2</div>
-<div class="box"> Episodio 3  </div>
-<div class="box"> Episodio 4 </div>
+<div class="box">
+  <img src="dragon bal.jpg"/>
+  <p>Dragon ball</p>
+</div>
 
+<div class="box">
+  <img src="hitori.jpg"/>
+      <p>Hitori no Shita</p>
+</div>
 
-<div class="box"> Episodio 5 </div>
-<div class="box"> Episodio 6</div>
-<div class="box"> Episodio 7  </div>
-<div class="box"> Episodio 8 </div>
+<div class="box">
+  <img src="ddt.jpg"/>
+    <p> Ramen-Daisuki</p>
+</div>
 
-<div class="box"> Episodio 9 </div>
-<div class="box"> Episodio 10</div>
-<div class="box"> Episodio  11</div>
-<div class="box"> Episodio 12</div>
-
+<div class="box"/>
+  <img src="dd.jpeg">
+    <p>Babysitters</p>
     </div>
 
 
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio  </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio  </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+<div class="box"> Episodio </div>
+
+</div>
 
 
 
 
 
-<div id="comentarios">
-    comentarios
+
+
+<div class="comentarios">
+    comentarios efeufenfnefu
 </div>
 
 <div id="series-recientes">
