--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -31,15 +31,17 @@
   </div>
 
 
-
-
-
   </main>
 
 
 
-<div id="banner">
-para poner el banner
+<div id="content-banner">
+ <div id="banner">
+    <img src="pokemon.jpeg">
+    <!-- <img src="boruto.png">
+    <img src="dragonball.jpeg"> -->
+ </div>
+
 </div>
 
 
