--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>animeyt.tv</title>
   <link rel="stylesheet" type="text/css" href="animeyt-tv.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
       <img src="buscar.png">
     </div>
   </div>
-  
+
   <div id="content-menu">
     <nav>
          <a href="animeyt-tv.html">INICIO</a>
@@ -34,8 +36,7 @@
 
 
 
-
-
+<!-- aqui comienza el contenido -->
   </main>
 
 
@@ -44,98 +45,232 @@
       para poner el banner
 </div>
 
-
-
-
-<div id="main">
-    <h1>Lista de episodios de anime</h1>
+<div id="content">
+    <h1> Capitulos Recientes</h1>
 
 <div class="box">
   <img src="dragon bal.jpg"/>
-  <p>Dragon ball</p>
+  <p>Dragon ball Ep 1</p>
 </div>
 
 <div class="box">
   <img src="hitori.jpg"/>
-      <p>Hitori no Shita</p>
+      <p>Hitori Ep 1</p>
 </div>
 
 <div class="box">
   <img src="ddt.jpg"/>
-    <p> Ramen-Daisuki</p>
+    <p> Ramen Ep 1</p>
 </div>
 
-<div class="box"/>
+<div class="box">
   <img src="dd.jpeg">
-    <p>Babysitters</p>
-    </div>
+    <p>Babysitters Ep 1</p>
+</div>
 
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
+<div class="box">
+    <img src="dd.jpeg">
+        <p>Babysitters Ep 2</p>
+</div>
+<div class="box">
+    <img src="dragon bal.jpg"/>
+        <p> Dragon ball Ep 2</p>
+</div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
 
-<div class="box"> Episodio  </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio  </div>
-<div class="box"> Episodio </div>
+<div class="box">
+    <img src="hitori.jpg"/>
+       <p>Hitori Ep 2</p>
+</div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
+<div class="box">
+    <img src="dd.jpeg"/>
+        <p>Babysitters Ep 3</p>
+</div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
+<div class="box">
+  <img src="ddt.jpg"/>
+    <p>Ramen Ep2</p>
+  </div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
+<div class="box">
+    <img src="dragon bal.jpg"/>
+      <p>Dragon ball Ep 3</p>
+</div>
 
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
-<div class="box"> Episodio </div>
+<div class="box">
+  <img src="dd.jpeg"/>
+      <p>Babysitter Ep 4</p>
+</div>
 
+
+<div class="box">
+    <img src="ddt.jpg"/>
+        <p>Ramen Ep 3</p>
+</div>
+
+<div class="box">
+    <img src="LOL.jpg"/>
+        <p>BeyBlade 1</p>
+</div>
+
+<div class="box">
+    <img src="dd.jpeg"/>
+        <p>Babysitter Ep 5</p>
+</div>
+
+<div class="box">
+  <img src="dragon bal.jpg"/>
+      <p>Dragon ball Ep 4 </p>
+</div>
+
+
+<div class="box">
+    <img src="dd.jpeg"/>
+        <p>Babysitter Ep 6</p>
+</div>
+
+
+<div class="box">
+  <img src="gta5.jpg"/>
+      <p>Gta5 anime Ep 1</p>
 </div>
 
 
 
+<div class="box">
+  <img src="to.jpg"/>
+      <p>Mickey Ep 1</p>
+</div>
 
 
+<div class="box">
+  <img src="hitori.jpg"/>
+      <p>Hitori Ep 3 </p>
+</div>
+
+<div class="box">
+  <img src="ddt.jpg"/>
+      <p>Ramen Ep 3 </p>
+</div>
+
+<div class="box">
+  <img src="LOL.jpg"/>
+      <p>BeyBlade Ep 2</p>
+</div>
 
 
+<div class="box">
+  <img src="dd.jpeg"/>
+      <p>Babysitter Ep 6</p>
+</div>
+
+
+<div class="box">
+  <img src="dragon bal.jpg"/>
+      <p>Dragon ball Ep 5</p>
+</div>
+
+<div class="box">
+    <img src="ddt.jpg"/>
+        <p>Ramen Ep 4</p>
+</div>
+
+
+<div class="box">
+  <img src="dd.jpeg"/>
+    <p>Babysitter Ep 7</p>
+</div>
+
+
+<div class="box">
+    <img src="LOL.jpg"/>
+      <p>BeyBlade Ep 3</p>
+</div>
+
+
+<div class="box">
+      <img src="ddt.jpg"/>
+        <p>Ramen Ep 5</p>
+</div>
+
+<div class="box">
+  <img src="gta5.jpg"/>
+      <p>Gta5 anime Ep 2</p>
+</div>
+
+<div class="box">
+  <img src="ddt.jpg"/>
+      <p>Ramen Ep 6 </p>
+</div>
+
+<div class="box">
+  <img src="gta5.jpg"/>
+      <p>Gta5 anime Ep 3</p>
+</div>
+
+<div class="box">
+  <img src="LOL.jpg"/>
+      <p>BeyBlade Ep 4</p>
+</div>
+
+<div class="box">
+  <img src="dragon bal.jpg"/>
+      <p>Dragon ball Ep 6</p>
+</div>
+
+<div class="box">
+  <img src="to.jpg"/>
+      <p>Mickey Ep 2</p>
+</div>
+
+<div class="box">
+  <img src="hitori.jpg"/>
+      <p>Hitori Ep 4</p>
+</div>
+
+<div class="box">
+  <img src="gta5.jpg"/>
+      <p>Gta5 anime Ep 4</p>
+</div>
+
+<div class="box">
+  <img src="dd.jpeg"/>
+      <p>Babysitter Ep 8</p>
+</div>
+
+</div>
+
+<!-- aqui acaba el contenido -->
+
+<!--aqui comienza el  comentarios -->
 <div class="comentarios">
-    comentarios efeufenfnefu
-</div>
+
+<!-- aqui acaba -->
+
+<!--aqui el  series-recientes -->
 
 <div id="series-recientes">
         series reciente
 </div>
+<!-- aqui acaba -->
+
+<!-- aqui comienza el footer -->
 
 <div id="footer">
-        contenido final
+    Anime YT 2014 - 2018
+        <p>Este sitio no almacena ningún video en sus servidores, ni enlaza directamente,
+          solo comparte contenido almacenado en sitios dedicados a compartir archivos de
+          manera gratuita. ¡Únete a nuestras redes sociale!</p>
+<a href="https://www.facebook.com/AnimeYT" class="fa fa-facebook"></a>
+<a href="https://twitter.com/search?q=%23login" class="fa fa-twitter"></a>
+
 </div>
 
+<!-- aqui acaba -->
 
 </body>
 </html>
