--- a/animeyt-tv.html
+++ b/animeyt-tv.html
@@ -9,51 +9,51 @@
 </head>
 
 <body>
-
+<!--Comienzo del menu y navegadores donde contiene toda la parte de arriba  -->
 <main>
-
+<!--comienzo del contenedor del logo -->
   <div id="content-logo">
       <img src="naruto.png">
   </div>
+<!--final decontenedor del logo -->
 
+<!-- comienzo de contenido del buscador -->
   <div id="buscador">
       <input type="search" size="10" placeholder="buscar"/>
     <div class="lupa" src="buscador">
       <img src="buscar.png">
     </div>
   </div>
+  <!--final de contenido del buscador -->
 
+<!--contenido de menus con enlaces para ir a otra página -->
   <div id="content-menu">
     <nav>
+      <!-- Enlaces del menu-->
          <a href="animeyt-tv.html">INICIO</a>
          <a href="http://www.animeyt.tv/animes">ANIMES</a>
          <a href="http://www.animeyt.tv/emision">EN EMISIÓN</a>
          <a href="https://www.ytlandia.com/">NOTICIAS</a>
     </nav>
   </div>
+</main>
+<!--final del menu y navegadores -->
 
-
-
-
-<!-- aqui comienza el contenido -->
-
-  </main>
-
-
-
-
+<!-- Contenedor del banner-->
 <div id="content-banner">
- <div id="banner">
-    <img src="pokemon.jpeg">
-    <!-- <img src="boruto.png">
-    <img src="dragonball.jpeg"> -->
- </div>
-
+  <div id="banner">
+    <img src="dragonball.jpeg">
+    <h2>DRAGON BALL SUPER</h2>
+    <p> La serie se desarrola en la tierra, tiempo después de la lucha terrible contra Majin Buu. Por órdenes de Milk, Goku trabaja fuertemente todos los días en la agricultura. Sib embargo támbién tiene algunos momentos para entrenar. Por otra parte, Mr Satan, luego de haber salvado el planeta por segunda vez recibe el ¡¿Premio Mundial de la Paz?!</p>
+  </div>
 </div>
+<!-- final del contenedor del banner -->
 
+
+<!-- aqui comienza el contenido  con los capitulos que estan en emisión-->
 <div id="content">
     <h1> Capitulos Recientes</h1>
-
+<!--Cuadro de los capitulos -->
 <div class="box">
   <img src="dragon bal.jpg"/>
   <p>Dragon ball Ep 1</p>
@@ -239,22 +239,26 @@
   <img src="dd.jpeg"/>
       <p>Babysitter Ep 8</p>
 </div>
+<!--Aqui acaba los capitulos-->
 
 </div>
+<!-- aqui acaba la lista de episodios en emisión -->
 
-<!-- aqui acaba el contenido -->
 
-<!--aqui comienza el  comentarios -->
+<!--aqui comienza el  comentarios no se han podido hacer -->
 <div class="comentarios">
-
 <!-- aqui acaba -->
 
-<!--aqui el  series-recientes -->
+
+<!--aqui el  series-recientes
+No se han podido hacer-->
 
 <div id="series-recientes">
         series reciente
 </div>
-<!-- aqui acaba -->
+<!--Aqui acaba los comentarios pero no se han podido hacer-->
+<!-- aqui acaba con el contenido y la lista de episodios y los cuadros -->
+
 
 <!-- aqui comienza el footer -->
 
@@ -263,12 +267,12 @@
         <p>Este sitio no almacena ningún video en sus servidores, ni enlaza directamente,
           solo comparte contenido almacenado en sitios dedicados a compartir archivos de
           manera gratuita. ¡Únete a nuestras redes sociale!</p>
-<a href="https://www.facebook.com/AnimeYT" class="fa fa-facebook"></a>
-<a href="https://twitter.com/search?q=%23login" class="fa fa-twitter"></a>
-
+          <!--Aqui hay algunos enlaces de redes sociales-->
+          <a href="https://www.facebook.com/AnimeYT" class="fa fa-facebook"></a>
+          <a href="https://twitter.com/search?q=%23login" class="fa fa-twitter"></a>
+          <!--Aqui con los enlaces de la redes sociales-->
 </div>
-
-<!-- aqui acaba -->
+<!-- aqui acaba el footer -->
 
 </body>
 </html>
